<resources>
    <string name="app_name">GraphicalJavascriptCompiler</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">Email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="about_string">Hello! My name is Igal Blech and this application is my final project for my Software Engineering Bagrut for my high school. The main reason why I decided to make an app about graphical coding is to help people learn Javascript in a fun way and help people to use their creativity.<br>Thanks for icons8.com for providing free icons to use.</br></string>

    <string name="menu_tutorial_layout">Layout</string>
    <string name="menu_tutorial_login">Login</string>
    <string name="menu_tutorial_project">Project</string>
    <string name="menu_tutorial_javascript">Javascript</string>

    <string name="menu_main_login">Login</string>
    <string name="menu_main_register">Register</string>
    <string name="menu_main_tutorial">Tutorial</string>
    <string name="menu_main_about">About</string>
    <string name="menu_main_settings">Settings</string>
    <string name="title_activity_main">Graphical Images</string>

    <string name="menu_main_home">Home</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="menu_main_logout">Log Out</string>

    <string name="project_title_request">Please add A title to your project</string>
    <string name="project_cancel_button">Cancel</string>
    <string name="project_save_button">Save</string>
    <string name="project_project_description_edit_text">Project Description</string>
    <string name="project_project_title_edit_text">Project Title</string>

    <string name="hamoud_habibi_description">An image of hamoud habibi</string>
    <string name="script">Script</string>
    <string name="render">Render</string>
    <string name="error">Error</string>
    <string name="tv_project_error">Script Wan\'t Compiled</string>
    <string name="resume">Resume</string>
    <string name="btn_main_create_new">Create New Project</string>
    <string name="btn_main_open_gallery">Open Gallery</string>
    <string name="exit">Exit</string>
    <string name="et_login_username">Username/Email/Phone</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="et_login_forgot_password">Forgot Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="phone">Phone</string>
    <string name="et_register_password_repeat">Repeat Password</string>
    <string name="execute">Execute</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="share">Share</string>
    <string name="btn_script_share_onGallery">Share On Gallery</string>
    <string name="screens">Screens</string>
    <string name="account">Account</string>
    <string name="other">Other</string>
    <string name="et_popup_project_title">Create A New Project</string>
    <string name="et_popup_project_render_width">Render Width (px)</string>
    <string name="et_popup_project_render_height">Render Height (px)</string>
    <string name="et_popup_project_channel_bits">Channel Bits</string>
    <string name="et_popup_project_color_model">Color Model</string>
    <string name="et_popup_project_has_alpha">Has Alpha</string>
    <string name="et_popup_project_is_float">Is Float</string>
    <string name="create">Create</string>
    <string name="tv_login_forgot_password">Insert your phone to recive validation code.</string>
    <string name="send">Send</string>
    <string name="tv_login_forgot_password_validate">Insert here your received code.</string>
    <string name="ett_login_forgot_password_code">New Password</string>
    <string name="apply">Apply</string>
    <string name="tv_login_forgot_password_title">Insert your new password.</string>
    <string name="et_login_new_password">New Password</string>
    <string name="et_login_new_password_confirm">Confirm Password</string>
    <string name="tv_validate_user">An clarification code was send to your email. Please write it down here.</string>
    <string name="code">Code</string>
    <string name="cancel">Cancel</string>
    <string name="btn_validate_user_resend_sms">Resend SMS</string>
    <string name="btn_validate_user_resend_email">Resend Email</string>
    <string name="gray">Gray</string>
    <string name="rgb">RGB</string>
    <string name="hsv">HSV</string>
    <string name="cmyk">CMYK</string>
    <string name="color_model_text">\"Color Model : %s\"</string>
    <string name="logo_image">Logo Image</string>
    <string name="publish">Publish</string>
    <string name="close">Close</string>

    <string name="btn_gallery_my_projects">My Projects</string>
    <string name="btn_gallery_new_projects">New Projects</string>
    <string name="height">Height</string>
    <string name="width">Width</string>
    <string name="info">Info</string>
    <string name="test">test</string>
    <string name="edit">edit</string>
    <string name="btn_gallery_top_projects">Top Projects</string>
    <string name="btn_gallery_hop_projects">Hot Projects</string>
    <string name="delete">delete</string>



    <string name="title_activity_settings">ActivitySettings</string>
    <!-- Preference Titles -->
    <!-- Messages Preferences -->
    <!-- Sync Preferences -->
    <string name="preference_file_key">MAIN_KEY</string>

</resources>
