<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_tutorial_layout"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_tutorial_layout" />

    <item
        android:id="@+id/navigation_tutorial_login"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/menu_tutorial_login" />

    <item
        android:id="@+id/navigation_tutorial_project"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/menu_tutorial_project" />

    <item
        android:id="@+id/navigation_tutorial_javascript"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/menu_tutorial_javascript" />



</menu>
