<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_gravity="center"
    style="?android:attr/buttonBarStyle">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/tv_login_forgot_password" />

    <EditText
        android:id="@+id/etLoginForgotPasswordEmail"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints=""
        tools:ignore="TextFields" />


    <EditText
        android:id="@+id/etLoginForgotPasswordPhone"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/phone"
        android:inputType="phone"
        android:autofillHints="" />


    <Button
        android:id="@+id/btnLoginForgotPasswordSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        style="?android:attr/buttonBarButtonStyle"
        android:text="@string/send" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/tv_login_forgot_password_validate" />

    <EditText
        android:id="@+id/etLoginForgotPasswordCode"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/ett_login_forgot_password_code"
        android:inputType="number"
        android:autofillHints=""
        tools:ignore="TextFields" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnLoginForgotPasswordCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/cancel"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnLoginForgotPasswordApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/apply"
            style="?android:attr/buttonBarButtonStyle" />


    </LinearLayout>


</LinearLayout>