<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_gravity="center"
    style="?android:attr/buttonBarStyle">

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/tv_validate_user" />

    <EditText
        android:id="@+id/etValidateUserCode"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/code"
        android:inputType="number"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnValidateUserCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btnValidateUserResendSMS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_validate_user_resend_sms"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btnValidateUserResendEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_validate_user_resend_email"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btnValidateUserApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply"
            style="?android:attr/buttonBarButtonStyle"/>



    </LinearLayout>


</LinearLayout>