<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/tv_login_forgot_password_title" />

    <EditText
        android:id="@+id/etLoginNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/et_login_new_password"
        android:inputType="textPassword"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etLoginNewPasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/et_login_new_password_confirm"
        android:inputType="textPassword"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnLoginNewPasswordApply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/apply" />

</LinearLayout>