<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    xmlns:tools="http://schemas.android.com/tools"

    android:orientation="horizontal"
    tools:context=".ActivityGallery">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="0.7"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnGalleryMyProjects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/btn_gallery_my_projects"
            />

        <Button
            android:id="@+id/btnGalleryNewProjects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/btn_gallery_new_projects"
            />

        <Button
            android:id="@+id/btnGalleryTopProjects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/btn_gallery_top_projects" />

        <Button
            android:id="@+id/btnGalleryHotProjects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/btn_gallery_hop_projects" />

        <Button
            android:id="@+id/btnGalleryExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/exit"
            />

    </LinearLayout>

    <ListView
        android:id="@+id/lsGalleryProjects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="0.3"
        />

</LinearLayout>
